--- a/vid/videos/templates/index.html
+++ b/vid/videos/templates/index.html
@@ -3,7 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <title>Stream-a-vid</title>
-    <link rel="stylesheet" href="style.css" />
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap");
+
+* {
+  font-family: "Grand Hotel", cursive;
+  margin: 0;
+  color: #fff;
+}
+
+body {
+  background-color: #212121;
+}
+
+header {
+  padding: 10px 40px;
+  display: flex;
+  justify-content: space-between;
+  font-size: xx-large;
+  background-color: rgb(0, 0, 0, 24);
+}
+
+.left-prt {
+  color: #fff;
+}
+
+#search {
+  border-radius: 180px;
+  border: 0;
+  font-size: large;
+  padding: 10px 30px;
+  outline: none !important;
+  background-color: #d9d9d9;
+  color: #212121;
+}
+
+.frame {
+  height: 130px;
+  width: 280px;
+  border-radius: 12px;
+  background-color: #d9d9d9;
+  padding: 10px;
+  margin: 20px;
+}
+
+/* 
+Start - Main
+*/
+
+h2 {
+  font-size: 30px !important;
+  font-weight: 100;
+}
+
+main {
+  margin: 40px;
+}
+
+.popular,
+.continue {
+  display: flex;
+  flex-basis: 30%;
+}
+
+    </style>
   </head>
 
   <body>
@@ -22,6 +85,12 @@
             <div class="frame"></div>
         </div>
         <h2>Continue Watching</h2>
+        <div class="continue">
+            <div class="frame"></div>
+            <div class="frame"></div>
+            <div class="frame"></div>
+            <div class="frame"></div>
+        </div>
         <div class="continue">
             <div class="frame"></div>
             <div class="frame"></div>
